Modified conf file and documentation